<resources>
    <string name="app_name" translatable="false">Recycling Starter</string>
    <string name="header_registration">Collaborator registration</string>
    <string name="button_register">Register</string>
    <string name="input_full_name">Full name</string>
    <string name="input_email" translatable="false">E-mail</string>
    <string name="input_phone_number">Phone number</string>
    <string name="input_address">Address</string>
    <string name="input_office">Office</string>
    <string name="header_user">Collaborator</string>
    <string name="button_box_clear">Clear</string>
    <string name="button_box_done">Done</string>

    <!--    Окно авторизации    -->
    <string name="authorization_header">Authorization</string>
    <string name="input_password">Password</string>
    <string name="link_register">Don\'t have an account yet? Registration…</string>
    <string name="button_login">Log in</string>
</resources>
