<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textHeaderUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_user"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <View
        android:id="@+id/lineHeaderUser"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/base"
        app:layout_constraintEnd_toEndOf="@+id/textHeaderUser"
        app:layout_constraintStart_toStartOf="@+id/textHeaderUser"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderUser" />

    <Button
        android:id="@+id/buttonClearBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/style_button_blue"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/button_box_clear"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDoneBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDoneBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_blue"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/button_box_done"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>